Added planet descriptions
some minor config changes

--- a/KnuraSystem/configs/Basil.cfg
+++ b/KnuraSystem/configs/Basil.cfg
@@ -13,7 +13,7 @@
         Properties
         {
             displayName = Basil^N
-            description = Like the leaf, NOT the fox.  We dont speak about him.  
+            description = Basil is almost like the Muns long-lost big brother. It has about twice the radius and surface gravity, and other than its nifty blue shade it has a very similar surface, peppered with both large and small craters. Its most prominant feature is the Mare Lamenta - the sea of tears - a vast frozen lava-field from the moons more geologically active ancient history.
             radius = 376000 // In meters.
             geeASL = 0.41 // In gees, wow.
             rotationPeriod = 42380  // Rotation in seconds
