--- a/KnuraSystem/configs/Chople.cfg
+++ b/KnuraSystem/configs/Chople.cfg
@@ -13,7 +13,7 @@
         Properties
         {
             displayName = Chople^N
-            description = My favorite comedian - dave chople 
+            description = Chople appears like a great piece of green sea glass, with its surface knapped into high plateaus, ridged moutains and deep, scooped out basins. Its surface is defined by the Grand Craggle, a spanning network of valleys that terminates in a deep, ciruclar crater. What could have carved such a fluid feature out of this glassy world?
             radius = 425000 // In meters.
             geeASL = 0.46 // In gees, wow.
             tidallyLocked = True
@@ -83,8 +83,8 @@
                 normals = KnuraSystem/textures/PluginData/Chople_normal.png // normals
 
                 color = 1,1,1,1
-                specColor = 0,0,0,0
-                shininess = 1
+                specColor = 0.95,1,0.95,1
+                shininess = 0.7
             }
         }			
         PQS
