--- a/KnuraSystem/configs/Gloth.cfg
+++ b/KnuraSystem/configs/Gloth.cfg
@@ -13,7 +13,7 @@
         Properties
         {
             displayName = Gloth^N
-            description = The icecaps are GONE, baby!  Detailed terrain all the way around this bitch!  
+            description = While the public often lumps Gloth together with Laythe as "far away balls of wet dirt", the two moons really couldn't be more different.  While Laythe offers clean air and warm water, Gloth offers bitter cold, oily seas, and an atmospheric density that would make Eve jealous.  Many scientists wonder what mysteries might lie below its impenetrable clouds... 
             radius = 225000 // In meters.
             geeASL = 0.32 // In gees, wow.
             rotationPeriod = 87218  // Rotation in seconds
