--- a/KnuraSystem/configs/Hilli.cfg
+++ b/KnuraSystem/configs/Hilli.cfg
@@ -12,7 +12,7 @@
         Properties
         {
             displayName = Hilli^N
-            description = Like Hylic 
+            description = Astronomers believe that, along with Sixle, Hilli is the metallic core of a small moon that had its outer layers ripped off by some cataclysmic event.  However, like a diamond being pulled from the mud, this messy event revealed the two jewels of the Knura System.  
             radius = 18000 // In meters.
             geeASL = 0.1 // In gees, wow.
             rotationPeriod = 10000  // Rotation in seconds
