--- a/KnuraSystem/configs/Hop.cfg
+++ b/KnuraSystem/configs/Hop.cfg
@@ -13,7 +13,7 @@
 
         Properties
         {
-            description = Finally by Allah the terrain is compiling
+            description = Though it is the smallest body in the Knura system, Hop boasts an impressively large equatorial ri... No wait, thats Skip.  Skip has the ridge.  Or is it Hop?  Which one has the bald spots?  
             radius = 5740  // Adjust as needed
             geeASL = 0.07  // Gravity (1.0 = Kerbins gravity)
             rotationPeriod = 49285  // Rotation in seconds
