--- a/KnuraSystem/configs/Knura.cfg
+++ b/KnuraSystem/configs/Knura.cfg
@@ -12,7 +12,7 @@
         Properties
         {
             displayName = Knura^N
-            description = Wow... What a pretty planet.  I dare say, it almost looks like... a pleasant evening sky view from the authors bedroom window?!!?
+            description = Despite Kerbalkinds history-long obsession with the sky, Knura wasn't discovered until relavity recently.  Whenver anyone looked through a telescope and saw its sky-blue and whispy white clouds, they assumed that it was morning and that they'd lost track of time.  Then they'd start packing up their telescopes before realising it was actually still nightime; so they'd set them back up, spot Knura again, and fall into a confused loop of packing and unpacking until they pass out from exhaustion. I mean, its happened to all of us at least once, right?  Right...?  
             radius = 4320000 // In meters.
             geeASL = 1.3 // In gees, wow.
             rotates = True
