--- a/KnuraSystem/configs/Lema.cfg
+++ b/KnuraSystem/configs/Lema.cfg
@@ -13,7 +13,7 @@
 
         Properties
         {
-            description = Finally by Allah the terrain is compiling
+            description = Lemas surface hold evidence of ancient asteroid impacts that left huge, hemisphere-wide craters. Over time the ejecta has fallen back to the surface to create steep, white peaks of blasted ice. These highlands loom high over the surface-wide purple-grey ocean of ice shards and slush, which our scientists hypothosis "definitely tastes like blueberries".  
             radius = 49200  // Adjust as needed
             geeASL = 0.14  // Gravity (1.0 = Kerbins gravity)
             rotationPeriod = 93745  // Rotation in seconds
