--- a/KnuraSystem/configs/Ollagander.cfg
+++ b/KnuraSystem/configs/Ollagander.cfg
@@ -13,7 +13,7 @@
 
         Properties
         {
-            description = Finally by Allah the terrain is compiling
+            description = A small, squat, grey moon. Almost hypnotically boring, if it wasn't for its unique polar icecaps - the only ones to be found among Knuras moons.  Its thought that Ollagander used to have a full-surface ice covering, like Hop and Skip, before a period of heavy bombarbment blew it all away.  
             radius = 54980  // Adjust as needed
             geeASL = 0.087  // Gravity (1.0 = Kerbins gravity)
             rotationPeriod = 75345  // Rotation in seconds
