--- a/KnuraSystem/configs/Run.cfg
+++ b/KnuraSystem/configs/Run.cfg
@@ -13,7 +13,7 @@
 
         Properties
         {
-            description = Finally by Allah the terrain is compiling
+            description = Runs highly eccentric orbit, which brings it from the outer limbs of the Knura system to the ring-gap sheparded by Gloth, has resulted in it becoming stretched into an oblong, potato-like shape.  Some have theorised that might might even be a remnant of the impact that created Gloths Renés Crater, while others have called this hypothesis "wack" and "probably not right".  
             radius = 38760  // Adjust as needed
             geeASL = 0.09  // Gravity (1.0 = Kerbins gravity)
             rotationPeriod = 35646  // Rotation in seconds
