--- a/KnuraSystem/configs/Sixle.cfg
+++ b/KnuraSystem/configs/Sixle.cfg
@@ -12,7 +12,7 @@
         Properties
         {
             displayName = Sixle^N
-            description = Like Psychic 
+            description = Despite its illustrious appearance, Sixle is composed mostly out of Nickel and carbonised Iron, making it something closer to a big ball of Steel than a big ball of Silver.  From certain points on its surface, Hilli appears to bobble back and force in the sky.  
             radius = 30000 // In meters.
             geeASL = 0.18 // In gees, wow.
             rotationPeriod = 10000  // Rotation in seconds
