--- a/KnuraSystem/configs/testAster.cfg
+++ b/KnuraSystem/configs/testAster.cfg
@@ -13,7 +13,7 @@
 
         Properties
         {
-            description = Finally by Allah the terrain is compiling
+            description = The larger of Knuras two innermost moons, Hop can be distinguished by... wait, no... Skip?  This one is Skip, right?  
             radius = 4440  // Adjust as needed
             geeASL = 0.06  // Gravity (1.0 = Kerbins gravity)
             rotationPeriod = 35646  // Rotation in seconds
