--- a/KnuraSystem/science/Science_Text.cfg
+++ b/KnuraSystem/science/Science_Text.cfg
@@ -1,3 +1,5 @@
+# The file OPM_ScienceDefs has has over 2,300 lines.  God help me.  
+
 @EXPERIMENT_DEFINITION:HAS[#id[evaReport]]
 {
     @RESULTS
@@ -11,7 +13,6 @@
         GlothSrfLandedrCrateL = The oil is so shallow here that you can just about see your feet.  Well, you would be able to if you weren't sinking into the wet sand.  
         GlothSrfLandedmiscL = The oil is so shallow here that you can just about see your feet.  Well, you would be able to if you weren't sinking into the wet sand.   
         GlothSrfLandedcat = This mod was made my Hermaeus Jackson and was started on the 25th of January 2025 (or at least thats the date on Knuras texture, which was the first asset i created).  I originally made a planet pack using Kragrathea, the predecessor to this mod, back in 2017, and have been meaning to get back to it in all the time since.  It feels very unbelievably to come back to the hobby after all time time and see the mod-space in such a rich, mature state.  This game looks FANTASTIC now, it's almost witchcraft.  
-
         GlothSrfLandedhigh = The ice here is quite clean compared to what you can find towards the coast, giving it an almost-clean appearance. You think about making a snow angel, but you remember that you don't have a washing machine in the ship.   
         GlothSrfLandedmid = The ice here has been weathered into tiny particles, and dusted with an oily yellow layer of hydrocarbons and all sorts of strange, sticky molecules.  It almost looks like a beach!  Sort of... 
         GlothSrfLandedlow = The coast is lined with glades of giant mushrooms, all covered in hanging lichens and soaking up whatever little sunlight they can with their great, green caps.  The sand here has been stained green by the sea, giving the scene a distictive "coastal forest meets week-old sandwich" aesthetic.  
@@ -30,6 +31,45 @@
         GlothSrfSplashedrCrateL = The tall, almost-complete crater rim shelters this bay from the elements, leaving its surface glassy and still.  You feel like a raisin stuck in jelly.  
         GlothSrfSplashedmiscL = This lake is so small that it's almost entirely still, with the wind just barely agitating the surface.  
         GlothSrfSplashedcat = Is the warmer here?  Gross...
+
+        GlothInSpaceLowssSea = 
+        GlothInSpaceLowoSea = 
+        GlothInSpaceLowmr = 
+        GlothInSpaceLowmm = 
+        GlothInSpaceLowms =  
+        GlothInSpaceLowla = 
+        GlothInSpaceLowrCrateL = 
+        GlothInSpaceLowmiscL = 
+        GlothInSpaceLowcat = 
+        GlothInSpaceLowhigh = 
+        GlothInSpaceLowmid = 
+        GlothInSpaceLowlow = 
+        GlothInSpaceLowrCrate = 
+        GlothInSpaceLowspecial = 
+        GlothInSpaceLowaCrate = 
+        GlothInSpaceLowjCrate =
+        GlothInSpaceLowbigshroom = 
+
+        GlothFlyingLowssSea = 
+        GlothFlyingLowoSea = 
+        GlothFlyingLowmr = 
+        GlothFlyingLowmm = 
+        GlothFlyingLowms =  
+        GlothFlyingLowla = 
+        GlothFlyingLowrCrateL = 
+        GlothFlyingLowmiscL = 
+        GlothFlyingLowcat = 
+        GlothFlyingLowhigh = 
+        GlothFlyingLowmid = 
+        GlothFlyingLowlow = 
+        GlothFlyingLowrCrate = 
+        GlothFlyingLowspecial = 
+        GlothFlyingLowaCrate = 
+        GlothFlyingLowjCrate =
+        GlothFlyingLowbigshroom = 
+
+        GlothFlyingHigh = 
+        GlothInSpaceHigh = 
     }
 }
 
